--- a/internship2018-1/src/index.html
+++ b/internship2018-1/src/index.html
@@ -33,8 +33,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="./index.html">Home</a>
-                        <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
+                            <a class="nav-item nav-link active" href="./index.html">Home</a>
+                            <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
+                            <a class="nav-item nav-link" href="./products.html">Products</a>                        
                         </div>
                     </div>
                 </nav>           
