--- a/internship2018-1/src/lesson3.html
+++ b/internship2018-1/src/lesson3.html
@@ -32,8 +32,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="./index.html">Home</a>
-                    <a class="nav-item nav-link active" href="./lesson3.html">Lesson 3</a>
+                        <a class="nav-item nav-link" href="./index.html">Home</a>
+                        <a class="nav-item nav-link active" href="./lesson3.html">Lesson 3</a>
+                        <a class="nav-item nav-link" href="./products.html">Products</a>
                     </div>
                 </div>
             </nav>           
