Cascading Style Sheets

--- a/internship2018-1/src/lesson3.html
+++ b/internship2018-1/src/lesson3.html
@@ -35,6 +35,7 @@
                         <a class="nav-item nav-link" href="./index.html">Home</a>
                         <a class="nav-item nav-link active" href="./lesson3.html">Lesson 3</a>
                         <a class="nav-item nav-link" href="./products.html">Products</a>
+                        <a class="nav-item nav-link" href="./css.html">Css</a>
                     </div>
                 </div>
             </nav>           
