--- a/internship2018-1/src/products.html
+++ b/internship2018-1/src/products.html
@@ -27,7 +27,8 @@
                             <div class="navbar-nav">
                             <a class="nav-item nav-link" href="./index.html">Home</a>
                             <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
-                            <a class="nav-item nav-link active" href="./products.html">Products</a>                                                    
+                            <a class="nav-item nav-link active" href="./products.html">Products</a>
+                            <a class="nav-item nav-link" href="./css.html">Css</a>
                             </div>
                         </div>
                     </nav>           
