--- a/internship2018-1/src/index.html
+++ b/internship2018-1/src/index.html
@@ -35,7 +35,8 @@
                         <div class="navbar-nav">
                             <a class="nav-item nav-link active" href="./index.html">Home</a>
                             <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
-                            <a class="nav-item nav-link" href="./products.html">Products</a>                        
+                            <a class="nav-item nav-link" href="./products.html">Products</a>
+                            <a class="nav-item nav-link" href="./css.html">Css</a>
                         </div>
                     </div>
                 </nav>           
